Tweaked a bunch of content changes.

--- a/content/posts/2020-10-24-rotf-remix-houlens-tomb.mdx
+++ b/content/posts/2020-10-24-rotf-remix-houlens-tomb.mdx
@@ -10,4 +10,6 @@ showToc: false
 
 I created this map for a custom scenario in my Rime of the Frostmaiden Campaign using [DungeonDraft](https://dungeondraft.net/).
 
+In my scenario, the players faced a cult of Barbarians who were seeking magic items from the ancient tomb of one of the original Horizon Walkers.  A group were guarding the entrance, while the main group camped out in the first chamber.  The leaders were back toward the secret entrance to the tomb.
+
 [![Battlemap of a natural cavern with hidden tomb in the back.](https://i.redd.it/c7hhvkh7st961.jpg)](https://i.redd.it/c7hhvkh7st961.jpg)
