--- a/content/posts/2021-01-08-be-friends-with-your-roleplaying-group.mdx
+++ b/content/posts/2021-01-08-be-friends-with-your-roleplaying-group.mdx
@@ -10,25 +10,9 @@ showToc: false
 
 I will write a whole post someday on the importance of friendship in Tabletop Roleplaying groups. Today though I want to capture two tweets I made because I don't think you can ever say this enough. 
 
+> DnD tip: Play groups should work to be friends. Being part of an RPG group makes you are very vulnerable. Doing voices, expressing emotion, or just asking someone to do something cool with you makes you vulnerable.— Optional Rule (@optionalrule) [January 8, 2021](https://twitter.com/optionalrule/status/1347642826612473859?ref_src=twsrc%5Etfw)
 
-
-
-
-
-> [#DnD](https://twitter.com/hashtag/DnD?src=hash&ref_src=twsrc%5Etfw) tip: Play groups should work to be friends. Being part of an RPG group makes you are very vulnerable. Doing voices, expressing emotion, or just asking someone to do something cool with you makes you vulnerable.— Optional Rule (@optionalrule) [January 8, 2021](https://twitter.com/optionalrule/status/1347642826612473859?ref_src=twsrc%5Etfw)
-
- <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-
-
-
-
-> [#DnD](https://twitter.com/hashtag/DnD?src=hash&ref_src=twsrc%5Etfw) Tip: Make friends with your DM. DMing is a particularly vulnerable job. Not only do you have all the vulnerability of all the other players, but you represent adversity to the rest of the group. That can be hard. Most poor DM behavior is compensating for that.— Optional Rule (@optionalrule) [January 8, 2021](https://twitter.com/optionalrule/status/1347643094943019010?ref_src=twsrc%5Etfw)
-
- <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-
-
+> DnD Tip: Make friends with your DM. DMing is a particularly vulnerable job. Not only do you have all the vulnerability of all the other players, but you represent adversity to the rest of the group. That can be hard. Most poor DM behavior is compensating for that.— Optional Rule (@optionalrule) [January 8, 2021](https://twitter.com/optionalrule/status/1347643094943019010?ref_src=twsrc%5Etfw)
 
 That's it. Try to be friends with each other is the best advice I can give any gaming group. Learn a bit about each other and learn to enjoy each other's company for a bit. You don't have to be the best of friends. You don't have to be up in each others lives, which can even be unhealthy. However, you're going to be spending a few hours together every week, being vulnerable in your roleplaying, and hanging your hopes for a fun time on every other person in the game. 
 
