--- a/content/posts/2024-04-28-ttrpg-tools-for-collaboration.mdx
+++ b/content/posts/2024-04-28-ttrpg-tools-for-collaboration.mdx
@@ -35,15 +35,15 @@ Games without a good alignment of expectations can be incredibly frustrating for
 
 Tools that can be helpful here, uncover assumptions, illustrate differences in a meaningful way, and help reach a consensus on how situations will be resolved. Techniques might include:
 
-1. **Explaining** what outcome they expect from the action and why. "I steal the gem off the table while nobody is looking because I think the Lord will blame their housekeeper." Something like this brings the base level assumptions to the top so players can either clear up assumptions ("Well the Lord has had this housekeeper for decades and only just met you, they are more likely to blame a stranger"), or they can negotiate ("Yes, but without some kind of supporting evidence they may not blame anyone specifically and choose to search everyone."). This helps normalize everyone's point of view about how the world works enough to align character actions.
+**Explaining** what outcome they expect from the action and why. "I steal the gem off the table while nobody is looking because I think the Lord will blame their housekeeper." Something like this brings the base level assumptions to the top so players can either clear up assumptions ("Well the Lord has had this housekeeper for decades and only just met you, they are more likely to blame a stranger"), or they can negotiate ("Yes, but without some kind of supporting evidence they may not blame anyone specifically and choose to search everyone."). This helps normalize everyone's point of view about how the world works enough to align character actions.
 
-2. In World **Examples**. As a DM tool, providing examples of how the world sees things in broad strokes can help players understand the assumptions of the world. Do tavern brawls normally turn into sword fights, or do they just try to knock each other out? Do guards arrest criminals or just kill them? Are (insert race or culture) just a bunch of murderous psychopaths or do they have traditions and nuances of their own? These are all very common things players should know at a table but can start with very different assumptions. The smart DM uses "random encounters" to create examples that proactively answer these questions ahead of time. A constant stream of examples not only clears up the assumptions but gives the world a sense of life and a point of view and DMs should lean into this tool heavily.
+In World **Examples**. As a DM tool, providing examples of how the world sees things in broad strokes can help players understand the assumptions of the world. Do tavern brawls normally turn into sword fights, or do they just try to knock each other out? Do guards arrest criminals or just kill them? Are (insert race or culture) just a bunch of murderous psychopaths or do they have traditions and nuances of their own? These are all very common things players should know at a table but can start with very different assumptions. The smart DM uses "random encounters" to create examples that proactively answer these questions ahead of time. A constant stream of examples not only clears up the assumptions but gives the world a sense of life and a point of view and DMs should lean into this tool heavily.
 
-3. **Debate**. Players love to debate at a table, and often the DM sits aside and listens. This is an important tool for a DM as they often pick up new ideas, but it's also an opportunity to either clear up bad assumptions on the part of the players, or bend the world to integrate an assumption the DM hadn't had previously. Sure these debates can degrade into a timewaste, but not always, and an artful group will spend at least some time talking about their assumptions with each other. 
+**Debate**. Players love to debate at a table, and often the DM sits aside and listens. This is an important tool for a DM as they often pick up new ideas, but it's also an opportunity to either clear up bad assumptions on the part of the players, or bend the world to integrate an assumption the DM hadn't had previously. Sure these debates can degrade into a timewaste, but not always, and an artful group will spend at least some time talking about their assumptions with each other. 
 
-4. **Storytelling**. In-world storytelling is a powerful technique for demonstrating how you think the world perceives specific actions. For players this can happen as part of their backstory development, how the world reacted to their previous actions. The DM can related stories or lore in the world that express important information about how the world works. The most powerful way to use lore is to integrate it to something important for a current adventure. 
+**Storytelling**. In-world storytelling is a powerful technique for demonstrating how you think the world perceives specific actions. For players this can happen as part of their backstory development, how the world reacted to their previous actions. The DM can related stories or lore in the world that express important information about how the world works. The most powerful way to use lore is to integrate it to something important for a current adventure. 
 
-5. DM/Player **Vision**. A game suffers the most when the DM, the de facto guide to how the world works in a campaign, is out of alignment with one or more players. This is a particularly difficult situation because so much influence is on the DM's shoulders and ability to change. In these cases, DMs taking some time to express some of their vision for how the world works can be of great value. It at least establishes a baseline of where the world is starting from and should be a jumping off point for a conversation. Players can then do the same about how they see the world works and the group can hopefully keep that in mind to filter their experiences, or modify expectations to be in better alignment.
+DM/Player **Vision**. A game suffers the most when the DM, the de facto guide to how the world works in a campaign, is out of alignment with one or more players. This is a particularly difficult situation because so much influence is on the DM's shoulders and ability to change. In these cases, DMs taking some time to express some of their vision for how the world works can be of great value. It at least establishes a baseline of where the world is starting from and should be a jumping off point for a conversation. Players can then do the same about how they see the world works and the group can hopefully keep that in mind to filter their experiences, or modify expectations to be in better alignment.
 
 ## What Experiences are Enjoyable
 
@@ -53,21 +53,21 @@ Games without a good alignment of what actions players find fun often seem borin
 
 Tools that can be helpful here reward the kind of play the group is looking for, create a shared sense of fun, or give players the moment to shine in their individual actions. Techniques might include:
 
-1. **Planning.** Players love to plan and it's a good idea for them to work one out. Even if they don't follow it, this tends to be an exercise in the players defining what they think would be most fun. DMs should listen carefully, a plan is an explicit statement about what players would think is fun. DMs should consider giving players the kind of information that leads them to the kind of play the DM would think is fun. For example, is a local troll intelligent and willing to negotiate? Then give the players some kind of hint "A local caravaner said the troll asked why they were there and chased them away with a rock."
+**Planning.** Players love to plan and it's a good idea for them to work one out. Even if they don't follow it, this tends to be an exercise in the players defining what they think would be most fun. DMs should listen carefully, a plan is an explicit statement about what players would think is fun. DMs should consider giving players the kind of information that leads them to the kind of play the DM would think is fun. For example, is a local troll intelligent and willing to negotiate? Then give the players some kind of hint "A local caravaner said the troll asked why they were there and chased them away with a rock."
 
-2. **Spotlight.** Give each other a moment to shine in the spotlight and understand this is a group activity. This means players can either play along or give someone space (maybe even take a break) while another player has their moment. DMs should create opportunities for these moments and help make sure they don't run too long and moments are shared appropriately across the entire party. This isn't to say DMs should create small solo adventures for each player, but that shifting the spotlight based on the kind of action specific players like is a way that allows the entire group to participate.
+**Spotlight.** Give each other a moment to shine in the spotlight and understand this is a group activity. This means players can either play along or give someone space (maybe even take a break) while another player has their moment. DMs should create opportunities for these moments and help make sure they don't run too long and moments are shared appropriately across the entire party. This isn't to say DMs should create small solo adventures for each player, but that shifting the spotlight based on the kind of action specific players like is a way that allows the entire group to participate.
 
-3. **System Incentives.** System design has a lot of influence on what types of activities players seek out. DnD is often said to be a game about combat, I'm not going to argue about identity here but there sure are a whole lot of rules about combat so you shouldn't be surprised if players choose violence. Finding the right system or playing with house rules that reward the right kind of action with interesting gameplay can be very useful.
+**System Incentives.** System design has a lot of influence on what types of activities players seek out. DnD is often said to be a game about combat, I'm not going to argue about identity here but there sure are a whole lot of rules about combat so you shouldn't be surprised if players choose violence. Finding the right system or playing with house rules that reward the right kind of action with interesting gameplay can be very useful.
 
-4. **Rewards & Consequences.** This is as simple as it sounds. When players take actions that align with something you find fun, just tell them. "Hey, that was a lot of fun." Likewise, the game world or characters can do the same, praising a character for their actions, and seeing the world changed in an appropriate way because of it. On the flip side, consequences are another tool. If you have a party that wants to roleplay often, having no consequences for the character that chooses violence frequently will just cause problems. This isn't to say you should knuckle down on a player, but you can resolve uninteresting actions quickly and focus the time on interesting ones.  
+**Rewards & Consequences.** This is as simple as it sounds. When players take actions that align with something you find fun, just tell them. "Hey, that was a lot of fun." Likewise, the game world or characters can do the same, praising a character for their actions, and seeing the world changed in an appropriate way because of it. On the flip side, consequences are another tool. If you have a party that wants to roleplay often, having no consequences for the character that chooses violence frequently will just cause problems. This isn't to say you should knuckle down on a player, but you can resolve uninteresting actions quickly and focus the time on interesting ones.  
 
-5. **Be Explicit.** The party should talk to one another about what kinds of actions they find fun. Give examples of other games where great fun was had and why you enjoy it. This helps groups find common ground, or at least understand when another player needs a moment for their action to play out in an enjoyable way.
+**Be Explicit.** The party should talk to one another about what kinds of actions they find fun. Give examples of other games where great fun was had and why you enjoy it. This helps groups find common ground, or at least understand when another player needs a moment for their action to play out in an enjoyable way.
 
-6. **Campaign Setup.** When a game is being pitched, it's good to talk about the style and action everyone is looking for. The DM should put out their idea for the action in a campaign. DMs may be tempted to say 'it depends on the party', which is true but it's likely the DM has some point of view in a campaign they developed and a personal style as well. It's better to be explicit about those before the game even begins than to pretend you're an empty vessel waiting for the players to fill you up with their choices.
+**Campaign Setup.** When a game is being pitched, it's good to talk about the style and action everyone is looking for. The DM should put out their idea for the action in a campaign. DMs may be tempted to say 'it depends on the party', which is true but it's likely the DM has some point of view in a campaign they developed and a personal style as well. It's better to be explicit about those before the game even begins than to pretend you're an empty vessel waiting for the players to fill you up with their choices.
 
-7. **Character Setup.** Look at the top skill of each of the characters, and the top skill of the villains prepared for a game. These are explicit statements about what kinds of actions that character wants, or that villain will trigger. I don't know how many games I've had where I never had the opportunity to even use my highest skill. Character builds are often an explicit statement of what kinds of action the player is going to seek out. Likewise for monsters. Don't ignore that.
+**Character Setup.** Look at the top skill of each of the characters, and the top skill of the villains prepared for a game. These are explicit statements about what kinds of actions that character wants, or that villain will trigger. I don't know how many games I've had where I never had the opportunity to even use my highest skill. Character builds are often an explicit statement of what kinds of action the player is going to seek out. Likewise for monsters. Don't ignore that.
 
-8. **The Buddy System.** One of the best ways to form an agreement on what kinds of actions are fun, is for one player to bring another player into their plots and schemes. Using some of these other tools, you create a sense of connection between each other and build off of each other's fun.
+**The Buddy System.** One of the best ways to form an agreement on what kinds of actions are fun, is for one player to bring another player into their plots and schemes. Using some of these other tools, you create a sense of connection between each other and build off of each other's fun.
 
 ### A Note on Safety Tools 
 
