--- a/content/posts/2024-05-02-experience-matters-updated.mdx
+++ b/content/posts/2024-05-02-experience-matters-updated.mdx
@@ -24,11 +24,11 @@ Particularly for newer players, having XP directly related to thier character ac
 ## Awarding XP for Non-Combat Encounters
 One common misconception about XP-based advancement is that it solely rewards combat encounters. However, this couldn't be further from the truth. As I discussed in my article "The Zen of Awarding XP for Non-Combat Encounters," there are numerous ways to grant XP for a wide variety of in-game accomplishments. Here are a few examples:
 
-1. Roleplaying Encounters: Assign difficulty ratings to significant roleplaying encounters based on the stakes involved and the potential for world-altering consequences. The higher the difficulty, the more XP awarded.
+Roleplaying Encounters: Assign difficulty ratings to significant roleplaying encounters based on the stakes involved and the potential for world-altering consequences. The higher the difficulty, the more XP awarded.
 
-2. Exploration and Discovery: Reward players for uncovering hidden locations, solving intricate puzzles, or obtaining valuable information. The XP granted should reflect the complexity and importance of the discovery.
+Exploration and Discovery: Reward players for uncovering hidden locations, solving intricate puzzles, or obtaining valuable information. The XP granted should reflect the complexity and importance of the discovery.
 
-3. Skill Challenges: Design multi-step challenges that require players to utilize a variety of skills to overcome obstacles. Successful completion of these challenges should yield XP proportional to the difficulty and creativity involved.
+Skill Challenges: Design multi-step challenges that require players to utilize a variety of skills to overcome obstacles. Successful completion of these challenges should yield XP proportional to the difficulty and creativity involved.
 
 By diversifying the sources of XP, you encourage players to engage with the game world in meaningful ways beyond just combat, fostering a more immersive and well-rounded roleplaying experience.
 
