--- a/content/posts/2024-08-26-expanded-herb-list-for-shadowdark.mdx
+++ b/content/posts/2024-08-26-expanded-herb-list-for-shadowdark.mdx
@@ -26,13 +26,13 @@ Game Masters should determine which classes or backgrounds may have access to th
 
 Characters who wish to forage for herbs must spend 1 hour in-game and choose between two options:
 
-1. **Focused Foraging:** Search for a specific herb in the area. 
-   - Roll an INT check against the herb's DC. 
-   - If successful, find a single dose, and an additional dose for every 3 points above the DC.
+**Focused Foraging:** Search for a specific herb in the area. 
+- Roll an INT check against the herb's DC. 
+- If successful, find a single dose, and an additional dose for every 3 points above the DC.
 
-2. **General Foraging:** Search an area for any herbs you can find.
-   - Roll an INT check. Anything less than a Normal result is a failure, otherwise note the success range Normal (12+), Hard (15+), or Extreme (18+).
-   - Find 1 dose of a random herb of the rolled difficulty level, 1d3 herbs of the next lower difficulty, and 1d4 herbs from the lowest difficulty, as applicable.
+**General Foraging:** Search an area for any herbs you can find.
+- Roll an INT check. Anything less than a Normal result is a failure, otherwise note the success range Normal (12+), Hard (15+), or Extreme (18+).
+- Find 1 dose of a random herb of the rolled difficulty level, 1d3 herbs of the next lower difficulty, and 1d4 herbs from the lowest difficulty, as applicable.
 
 *Foraging Examples:*
 > **Focused Foraging**: Thorne, a skilled herbalist, is searching for Ghostweed (DC 13). He rolls a 16 on his INT check, succeeding by 3. Thorne finds 2 doses of Ghostweed.
@@ -117,13 +117,13 @@ These tables are also [available in PDF](/assets/downloads/shadowdar_extended_he
 
 This rule is not intended to supersede the Ranger Herbalism ability. Instead, it's designed to complement and enhance the Ranger's unique skills while providing options for other characters. Here's how it maintains balance:
 
-1. **Ranger's Efficiency**: Rangers can find and consume herbs as a multitask, which is significantly faster than the 1-hour foraging time for other characters.
+**Ranger's Efficiency**: Rangers can find and consume herbs as a multitask, which is significantly faster than the 1-hour foraging time for other characters.
 
-2. **Ranger's Expertise**: The Ranger Herb list includes no drawbacks, maintaining their edge in herbalism.
+**Ranger's Expertise**: The Ranger Herb list includes no drawbacks, maintaining their edge in herbalism.
 
-3. **Expanded Options**: Rangers can use their search ability on any herb of DC 15 or less from the expanded list, and do not suffer the drawbacks listed.
+**Expanded Options**: Rangers can use their search ability on any herb of DC 15 or less from the expanded list, and do not suffer the drawbacks listed.
 
-4. **Time Management**: While other characters spend significant time foraging, Rangers can perform other tasks, maintaining their versatility.
+**Time Management**: While other characters spend significant time foraging, Rangers can perform other tasks, maintaining their versatility.
 
 This design philosophy ensures that Rangers remain the masters of herbalism while allowing other characters to engage with the system in a meaningful way.
 
