--- a/content/posts/2024-09-04-mounted-combat-in-shadowdark.mdx
+++ b/content/posts/2024-09-04-mounted-combat-in-shadowdark.mdx
@@ -35,11 +35,11 @@ When mounted, you use your trusty steed's movement as your own. This can signifi
 
 However, mounted combat isn't all glory and triumph. There are risks to consider:
 
-1. **Bolting**: If your mount gets spooked (either by fright or by taking half its hit points in damage), you'll need to make a Morale check. Fail, and your mount bolts, carrying you away from the fray—whether you like it or not!
+**Bolting**: If your mount gets spooked (either by fright or by taking half its hit points in damage), you'll need to make a Morale check. Fail, and your mount bolts, carrying you away from the fray—whether you like it or not!
 
-2. **Staying Ahorse**: When your mount rears or stumbles, you'll need to make a hard Strength check to avoid being thrown. No proper saddle? You're rolling with disadvantage, cowboy.
+**Staying Ahorse**: When your mount rears or stumbles, you'll need to make a hard Strength check to avoid being thrown. No proper saddle? You're rolling with disadvantage, cowboy.
 
-3. **Unseating a Rider**: Enemies can try to knock you off your high horse with a contested Strength check. You get advantage on your roll, but if you fail, it's a long way down.
+**Unseating a Rider**: Enemies can try to knock you off your high horse with a contested Strength check. You get advantage on your roll, but if you fail, it's a long way down.
 
 ### Burdens: Carry Capacity of Mounts
 
@@ -64,7 +64,6 @@ Horses are the most common mount or pack animal in most setting, but by no means
 > - **ATK** hooves +2 (1d6)
 > - **MV** Double Near, **AL** N
 > 
-> |:---:|:---:|:---:|:---:|:---:|:---:|
 > |**S:** +2|**D:** +2|**C:** +2|**I:** -3|**W:** +1|**C:** -2|
 > 
 > **Surefooted.** ADV on any roll to avoid tripping or falling.
@@ -81,7 +80,6 @@ Horses are the most common mount or pack animal in most setting, but by no means
 > - **ATK:** hooves +4 (1d8)
 > - **MV** Double Near
 > 
-> |:---:|:---:|:---:|:---:|:---:|:---:|
 > |**S:** +4|**D:** +2|**C:** +3|**I:** -3|**W:** +1|**C:** -2|
 > 
 > **Fearless.** ADV on Morale checks.
