--- a/content/posts/2024-09-08-worldbuilding-through-food.mdx
+++ b/content/posts/2024-09-08-worldbuilding-through-food.mdx
@@ -79,25 +79,27 @@ The available food can tell players a lot about the local environment. Consider:
 
 To effectively use these strategies in your game, consider the following steps:
 
-1. **Create a food profile for each major culture in your world**
-   * List three staple ingredients used in most meals
-   * Describe common cooking methods, unique tools, or how food is stored
-   * Note any significant food-related traditions of who can eat, what, and why
+**Create a food profile for each major culture in your world**
+* List three staple ingredients used in most meals
+* Describe common cooking methods, unique tools, or how food is stored
+* Note any significant food-related traditions of who can eat, what, and why
 
-2. **Incorporate food descriptions into your scene-setting**
-   * Describe smells and sounds of cooking in market scenes
-   * Mention what characters are eating during social interactions
-   * Highlight an NPCs preferences through how they eat their food (greedy, cautious, supiciously smell every bite, etc)
+**Incorporate food descriptions into your scene-setting**
+* Describe smells and sounds of cooking in market scenes
+* Mention what characters are eating during social interactions
+* Highlight an NPCs preferences through how they eat their food (greedy, cautious, supiciously smell every bite, etc)
 
-3. **Use food as a plot device**
-   * A rare ingredient as a quest item
-   * Diplomatic incidents over unfamiliar food customs
-   * Poisoned feasts as a dramatic set-piece
+**Use food as a plot device**
 
-4. **Encourage player engagement with food**
-   * Ask players what their characters typically eat
-   * Allow cooking skill checks for mechanical benefits, like helping in negotiations
-   * Use food preferences as character development opportunities
+* A rare ingredient as a quest item
+* Diplomatic incidents over unfamiliar food customs
+* Poisoned feasts as a dramatic set-piece
+
+**Encourage player engagement with food**
+
+* Ask players what their characters typically eat
+* Allow cooking skill checks for mechanical benefits, like helping in negotiations
+* Use food preferences as character development opportunities
 
 ## Conclusion
 
