correct filenames. Incrased number of default random images.

--- a/content/posts/2020-11-03-tresendar-manor-above-ground.mdx
+++ b/content/posts/2020-11-03-tresendar-manor-above-ground.mdx
@@ -3,7 +3,7 @@ slug: "tresendar-manor-above-ground"
 title: "Tresendar Manor Above Ground"
 date: "2020-11-03"
 excerpt: "Above group battlemap of Tresendar Manor in Phandalin from 5th edition Lost Mines of Phandever or Dragon of Icespire Peak."
-featured_image: "/images/optionalrule-escaping-wound.png"
+featured_image: "/images/optionalrule-escaping-fireball.webp"
 draft: false
 showToc: false
 ---
