--- a/content/posts/2020-12-24-rotf-remix-lake-monster.mdx
+++ b/content/posts/2020-12-24-rotf-remix-lake-monster.mdx
@@ -3,7 +3,7 @@ slug: "rotf-remix-lake-monster"
 title: "RotF Remix: Lake Monster"
 date: "2020-12-24"
 excerpt: "A reworking of the Lake Monster quest from 5th edition Icewind Dale Rime of the Frostmaiden."
-featured_image: "/images/OR_Screenshot-870x570.jpg"
+featured_image: "/images/optionalrule-exploring-wizard.webp"
 draft: false
 showToc: false
 ---
