--- a/content/posts/2021-01-03-dd-livestream-discussion.mdx
+++ b/content/posts/2021-01-03-dd-livestream-discussion.mdx
@@ -3,7 +3,7 @@ slug: "dd-livestream-discussion"
 title: "D&D Livestream Discussion"
 date: "2021-01-03"
 excerpt: null
-featured_image: "/images/default-featured.jpg"
+featured_image: "/images/optionalrule-escaping-wound.webp"
 draft: false
 showToc: false
 ---
