--- a/content/posts/2021-01-04-rotf-remix-the-far-north-ten-towns.mdx
+++ b/content/posts/2021-01-04-rotf-remix-the-far-north-ten-towns.mdx
@@ -3,7 +3,7 @@ slug: "rotf-remix-the-far-north-ten-towns"
 title: "RotF Remix: The Far North & Ten-Towns"
 date: "2021-01-04"
 excerpt: "Enhance your 5th edition Rime of the Frostmaiden campaign with these additions to the Ten Towns in Icewind Dale."
-featured_image: "/images/OR_Screenshot-870x570.jpg"
+featured_image: "/images/optionalrule-exploring-wizard.webp"
 draft: false
 showToc: false
 ---
