--- a/content/posts/2021-01-12-rotf-remix-foaming-mugs.mdx
+++ b/content/posts/2021-01-12-rotf-remix-foaming-mugs.mdx
@@ -3,7 +3,7 @@ slug: "rotf-remix-foaming-mugs"
 title: "RotF Remix: Foaming Mugs"
 date: "2021-01-12"
 excerpt: "My modification to the Foaming Mugs quest from the 5th edition module, Rime of the Frostmaiden."
-featured_image: "/images/OR_Screenshot-870x570.jpg"
+featured_image: "/images/optionalrule-exploring-wizard.webp"
 draft: false
 showToc: false
 ---
