--- a/content/posts/2021-03-26-thinking-critically-on-agency.mdx
+++ b/content/posts/2021-03-26-thinking-critically-on-agency.mdx
@@ -3,7 +3,7 @@ slug: "thinking-critically-on-agency"
 title: "Thinking Critically on Agency"
 date: "2021-03-26"
 excerpt: "Link to my interview on the Thinking Critically podcast discussing the topic of player agency in 5th edition and TTRPGs."
-featured_image: "/images/default-featured.jpg"
+featured_image: "/images/optionalrule-escaping-wound.webp"
 draft: false
 showToc: false
 ---
