--- a/content/posts/2021-04-02-the-language-of-monsters-in-5e.mdx
+++ b/content/posts/2021-04-02-the-language-of-monsters-in-5e.mdx
@@ -3,7 +3,7 @@ slug: "the-language-of-monsters-in-5e"
 title: "The Language of Monsters in 5e"
 date: "2021-04-02"
 excerpt: "A count and analysis of languages listed for monsters in 5th edition statblocks."
-featured_image: "/images/default-featured.jpg"
+featured_image: "/images/optionalrule-exploring-encumbered.webp"
 draft: false
 showToc: false
 ---
