--- a/content/posts/2025-02-02-the-zero-sum-fallacy-of-ttrpgs.mdx
+++ b/content/posts/2025-02-02-the-zero-sum-fallacy-of-ttrpgs.mdx
@@ -3,7 +3,7 @@ slug: "the-zero-sum-fallacy-of-ttrpgs"
 title: "The Zero-Sum Fallacy of TTRPG Playstyles"
 date: "2025-02-02"
 excerpt: "The zero-sum fallacy of TTRPG playstyles and how it harms the hobby."
-featured_image: "/images/OR_Screenshot-870x570.jpg"
+featured_image: "/images/optionalrule-exploring-monster.webp"
 draft: false
 showToc: false
 ---
