--- a/content/posts/2025-08-12-this-is-my-new-post.mdx
+++ b/content/posts/2025-08-12-this-is-my-new-post.mdx
@@ -4,7 +4,7 @@ title: "This is my new post"
 date: "2025-08-12"
 excerpt: "A brief description of your post that will appear in previews and summaries."
 tags: ["tag1","tag2","tag3"]
-featured_image: "/images/default-featured.jpg"
+featured_image: "/images/optionalrule-exploring-encumbered.webp"
 draft: false
 showToc: false
 ---
