--- a/content/posts/2020-11-21-rotf-remix-the-inkwell-taphouse-termalaine.mdx
+++ b/content/posts/2020-11-21-rotf-remix-the-inkwell-taphouse-termalaine.mdx
@@ -3,7 +3,7 @@ slug: "rotf-remix-the-inkwell-taphouse-termalaine"
 title: "RotF Remix:  The Inkwell Taphouse, Termalaine"
 date: "2020-11-21"
 excerpt: "A rundown library in an old bar, fantastic location for use in your 5th edition Icewind Dale Rime of the Frostmaiden game."
-featured_image: "/images/OR_Screenshot-870x570.jpg"
+featured_image: "/images/optionalrule-exploring-encumbered.webp"
 draft: false
 showToc: false
 ---
