--- a/content/posts/2020-12-21-no-racism-is-not-required-in-a-fantasy-world.mdx
+++ b/content/posts/2020-12-21-no-racism-is-not-required-in-a-fantasy-world.mdx
@@ -3,7 +3,7 @@ slug: "no-racism-is-not-required-in-a-fantasy-world"
 title: "No, racism is not required in a fantasy world"
 date: "2020-12-21"
 excerpt: "A discussion of why racial essentialism is not needed, does not add anything, and hurts in 5th edition TTRPGs"
-featured_image: "/images/default-featured.jpg"
+featured_image: "/images/optionalrule-escaping-fireball.webp"
 draft: false
 showToc: false
 ---
