--- a/content/posts/2021-02-10-my-current-5e-house-rules.mdx
+++ b/content/posts/2021-02-10-my-current-5e-house-rules.mdx
@@ -3,7 +3,7 @@ slug: "my-current-5e-house-rules"
 title: "My Current 5e House Rules"
 date: "2021-02-10"
 excerpt: "A list of house rules I use in my own 5th edition game."
-featured_image: "/images/default-featured.jpg"
+featured_image: "/images/optionalrule-exploring-wizard.webp"
 draft: false
 showToc: false
 ---
