--- a/content/posts/2021-04-07-monster-resistance-totals-in-5e.mdx
+++ b/content/posts/2021-04-07-monster-resistance-totals-in-5e.mdx
@@ -3,7 +3,7 @@ slug: "monster-resistance-totals-in-5e"
 title: "Monster Resistance Totals in 5e"
 date: "2021-04-07"
 excerpt: "A breakdown and analysis of monster resistances across all the 5th edition monster statblocks."
-featured_image: "/images/default-featured.jpg"
+featured_image: "/images/optionalrule-exploring-wizard.webp"
 draft: false
 showToc: false
 ---
